--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,14 @@
 	</properties>
 
 	<dependencies>
+	<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+<dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.18.6</version>
+    <scope>provided</scope>
+</dependency>
+
 
 	<!-- https://mvnrepository.com/artifact/org.threeten/threetenbp -->
 <dependency>
