--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,15 @@
 
 # DATABASE CONFIG
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #
-jdbc.driverClassName=com.mysql.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/eshop
-#spring.datasource.username=root
-#spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#jdbc.driverClassName=com.mysql.jdbc.Driver
 #
-server.port=${PORT:5000}
+spring.datasource.url=jdbc:mysql://localhost:3306/eshop
+#
+spring.datasource.username=root
+#
+spring.datasource.password=root
+#server.port=${PORT:5000}
 
 # HIBERNATE CONFIG
 spring.jpa.show-sql=true
